add analysis about riders

--- a/Citibike - Statistical Analysis Project.ipynb
+++ b/Citibike - Statistical Analysis Project.ipynb
@@ -1711,6 +1711,7 @@
     }
    ],
    "source": [
+    "# try to consolidate this into one graph (double stacked bar graph)\n",
     "fig, ax =plt.subplots(1,2)\n",
     "\n",
     "df_pivot=df_final[df_final['starttime_year']==2019][['starttime_year','starttime_month','bikeid', 'usertype']]\\\n",
