--- a/Citibike - Statistical Analysis Project.ipynb
+++ b/Citibike - Statistical Analysis Project.ipynb
@@ -69,8 +69,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-22T13:23:40.110916Z",
-     "start_time": "2020-08-22T13:23:36.625229Z"
+     "end_time": "2020-08-23T19:10:34.325450Z",
+     "start_time": "2020-08-23T19:10:30.571746Z"
     }
    },
    "outputs": [
@@ -1420,8 +1420,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-22T13:23:51.938303Z",
-     "start_time": "2020-08-22T13:23:44.851247Z"
+     "end_time": "2020-08-23T19:11:55.731771Z",
+     "start_time": "2020-08-23T19:11:48.212867Z"
     }
    },
    "outputs": [],
@@ -2637,18 +2637,48 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-23T19:37:17.752062Z",
+     "start_time": "2020-08-23T19:37:17.748072Z"
+    }
+   },
+   "outputs": [],
    "source": [
-    "### Were there fewer rentals during COVID? (t-test)"
+    "from scipy import stats"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Are renters taking longer trips during COVID? (t-test)"
+    "### Were there more rentals during COVID? (t-test)\n",
+    "\n",
+    "- Null Hypothesis:\n",
+    "    - Number of rentals before and after COVID are the same.\n",
+    "<br>\n",
+    "- Alternative Hypothesis:\n",
+    "    - Number of rentals before and after COVID are not the same.\n",
+    "<br>\n",
+    "- Method:\n",
+    "    - 2-tailed, 2-sample t-test\n",
+    "<br>\n",
+    "- Alpha Level\n",
+    "    - 0.05 (or 95% confidence interval)\n",
+    "<br>\n",
+    "- Degrees of Freedom\n",
+    "    - df = n - 1\n",
+    "    - n=200\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
